--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   connectivity_plus: ^6.0.3
   shared_preferences: ^2.2.3
   sqflite: ^2.3.2
+  image_picker: ^1.1.2
+  firebase_core: ^3.0.0
+  firebase_storage: ^12.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +60,12 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
   flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/logo.png"
+  min_sdk_android: 21
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -67,9 +78,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icon/
+    # - .env
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
