--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_storage: ^12.0.0
   firebase_auth: ^5.0.0
   cloud_firestore: ^5.0.0
+  video_player: ^2.8.7
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,9 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon/logo.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#252829"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
